@@ -1,6 +1,6 @@
 //////////////////////////////////////////////////////////////////////////
 //
-//  Copyright (c) 2007-2012, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2007-2013, Image Engine Design Inc. All rights reserved.
 //
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -155,6 +155,7 @@ class RendererImplementation : public IECore::Renderer
 		IECore::ConstDataPtr getResolutionOption( const std::string &name ) const;
 		IECore::ConstDataPtr getRxOption( const char *name ) const;
 
+		IECore::CompoundDataPtr m_options;
 		IECore::CameraPtr m_camera;
 		void outputCamera( IECore::CameraPtr camera );
 
